<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.eshion.emap.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/main_content">

    <FrameLayout
        android:id="@+id/optionContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/routePlanningContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/routePlanning"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/route_planning_str"
                android:background="#3F51B5"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>

            <TextView
                android:id="@+id/offline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/offline_map_str"
                android:background="#3F51B5"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="2dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/coordinate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/coordinate_str"
                android:background="#3F51B5"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="2dp"
                android:gravity="center"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/optionContainer">
        <com.amap.api.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.amap.api.maps.MapView>

    </FrameLayout>



</RelativeLayout>
